[package]
name = "circle-integration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circle_integration"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
cctp = { path = "../../modules/cctp", features = ["cpi"]}
token-messenger-minter = { path = "../token-messenger-minter", features = ["cpi"]}
message-transmitter = { path = "../message-transmitter", features = ["cpi"]}
